Update refreneces ( some script/style files moved to /shared/assets)

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <span class="button-icon">🛠️</span>
                         View Projects
                     </a>
-                    <a href="/About" class="action-button secondary">
+                    <a href="/about" class="action-button secondary">
                         <span class="button-icon">👤</span>
                         About Me
                     </a>
