--- a/projects/index.html
+++ b/projects/index.html
@@ -57,7 +57,7 @@
         }
     }
     </script>
-    <script src="/JS/early-theme.js" type="text/javascript" ></script>
+    <script src="/shared/assets/scripts/early-theme.js" type="text/javascript" ></script>
 </head>
 
 <body>
