--- a/certificates/index.html
+++ b/certificates/index.html
@@ -49,14 +49,14 @@
         createHeader: true,
         createNav: true,
         createFooter: true,
-        darkMode:true,
+
     }
 </script>
 
 <script src="https://bloodweb.net/KeyFunctions.js" type="text/javascript"></script>
 <script src="/KeyFunctions.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
-<script src="/JS/nav.js" type="text/javascript"></script>
+<script src="/shared/assets/scripts/nav.js" type="text/javascript"></script>
 
 
 </body>
