--- a/projects/index.html
+++ b/projects/index.html
@@ -348,6 +348,6 @@
     
     <script src="/shared/assets/config/projects-config.js" type="text/javascript"></script>
     <script src="/shared/assets/scripts/projects.js" type="text/javascript"></script>
-    <script src="/JS/nav.js" type="text/javascript"></script>
+    <script src="/shared/assets/scripts/nav.js" type="text/javascript"></script>
 </body>
 </html>
