References updated to valid links. Images changed.

--- a/linktree/index.html
+++ b/linktree/index.html
@@ -14,6 +14,8 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <link rel="preload" as="image" href="/shared/assets/images/headshot.jpg">
+
     <style>
 
         :root {  
@@ -536,7 +538,7 @@
     <div class="linktree-container">
         <!-- Profile Section -->
         <div class="profile-section">
-            <img src="/i/web-ready/image_1.jpeg" alt="Jack Ewers" class="avatar">
+            <img src="/shared/assets/images/headshot.jpg" alt="Jack Ewers" class="avatar">
             <h1 class="profile-title">@the_guy_with_the_holes</h1>
             <p class="profile-subtitle">Developer • Builder • Advocate</p>
         </div>
@@ -594,7 +596,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            Powered by <a href="https://jackewers.com">JackEwers.com</a>
+            Powered by <a href="https://bloodweb.net">bloodweb.net</a> <img src="/shared/assets/images/branding/icon/BloodWeb.png" alt="Bloodweb" style="width:12px; height:12px; vertical-align:middle; margin-left:4px;">
         </div>
     </div>
 
